# modern-ugit

./: .gitignore  README.md  pyproject.toml
src/ugit/: __init__.py  base.py  cli.py  data.py
