[project]
name = "ugit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Nils Imdahl", email = "imdahlnils@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ugit = "ugit.cli:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
